# safecast

./: .clang-format  CMakeLists.txt  LICENSE.txt  README.md  safe_cast.hpp  safe_cast_test.cxx
.github/workflows/: cpp_ci.yml  github-actions-demo.yml
src/: safe_cast.hpp
